--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
     <string name="add">Add</string>
     <string name="remove">Remove</string>
     <string name="update">Update</string>
+    <string name="user_added">User added successfully!</string>
+    <string name="user_exists">User already exists!</string>
+    <string name="user_deleted">User deleted successfully!</string>
+    <string name="user_does_not_exist">User does not exists!</string>
+    <string name="user_updated">User updated!</string>
+    <string name="fields_are_not_valid">Fields are not valid!</string>
+    <string name="count">Count:</string>
+    <string name="zero">0</string>
 </resources>
